...
  }, [onClear]);

  return (
    <ChromeShell
      colors={isFocused ? [colors.tint, colors.tint, colors.tint] : undefined}
      style={styles.chromeShell}
      testID="search-bar"
    >
      <View
        style={[
          styles.container,
          { backgroundColor: colors.backgroundSecondary },
        ]}
...
