...
    },
    [expandedId, onToggleExpand, dateLabel, renderItemActions, numColumns, itemWrapperStyle]
  );

  return (
    <FlatList
      testID="beer-list"
      data={beers}
      keyExtractor={item => item.id}
      renderItem={renderItem}
      key={`beer-list-${numColumns}`}
      numColumns={numColumns}
      columnWrapperStyle={columnWrapperStyle}
...
